--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -74,7 +74,7 @@ header {
             position: static;
             img {
                 display: block;
-                max-width: 60%;
+                max-width: 95%;
                 margin: 0 auto;
             }
         }
