--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -8,6 +8,9 @@ nav {
     .mobile-logo {
         display: none;
     }
+    .mobile-content {
+        display: none;
+    }
     .fa-bars {
         font-size: 2.2rem;
         color: $barsColor;
@@ -41,15 +44,15 @@ nav {
 
 @media screen and (max-width: 992px) {
     nav {
-        .mobile-logo {
-            display: flex;
-        }
         .container {
-            .contact-information {
-                padding-top: 15px;
-            }
             .phones {
                 margin: 0 auto;
+            }
+            .mobile-content {
+                display: flex;
+            }
+            .pc-content {
+                display: none;
             }
         }
         .icons {
@@ -75,5 +78,12 @@ nav {
         .container {
             margin: 0;
         }
+    }
+}
+
+@media screen and (max-width: 992px) {
+    nav.navbar {
+        background-image: unset;
+        min-height: 100px;
     }
 }
