--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -17,8 +17,8 @@ $productName: #333333;
     .target3 {
         display: none;
     }
-    .target#div1,
-    .target1#div6,
+    .target#div3,
+    .target1#div8,
     .target2#div11,
     .target3#div13 {
         display: flex;
